# 8051-Emulator

./: CMakeLists.txt  README.md
CMake_Modules/: func_def.cmake  sdcc8051.cmake
project_files/: INSTRUCTIONS.ods
src/emulator/: cpu.cpp  ihxstream.cpp  memory.cpp
src/framwork/: emu_error.cpp
src/include/: c51_memory.h  cpu.h  debug.h  emu_error.h  ihxstream.h  memory.h
tests/: c51_cpu_lcall_test.cpp  c51_cpu_ljmp_test.cpp  c51_cpu_nop_test.cpp  c51_cpu_ret_test.cpp  debug_test.cpp  error_test.cpp  ihxstream_test.cpp
tests/8051_test_code/: CMakeLists.txt
tests/8051_test_code/instruction_test/: CMakeLists.txt
tests/8051_test_code/instruction_test/asm/: lcall.asm  ljmp.asm  mov.asm  movc.asm  movx.asm  nop.asm  ret.asm
tests/8051_test_code/instruction_test/asm/acall/: acall_page0.asm  acall_page1.asm  acall_page2.asm  acall_page3.asm  acall_page4.asm  acall_page5.asm  acall_page6.asm  acall_page7.asm
tests/8051_test_code/instruction_test/asm/add/: add_a_rn.asm
tests/8051_test_code/instruction_test/asm/ajmp/: ajmp_page0.asm  ajmp_page1.asm  ajmp_page2.asm  ajmp_page3.asm  ajmp_page4.asm  ajmp_page5.asm  ajmp_page6.asm  ajmp_page7.asm
tests/8051_test_code/instruction_test/asm/dec/: dec_a.asm  dec_addr.asm  dec_ri.asm  dec_rn.asm
tests/8051_test_code/instruction_test/asm/inc/: inc_a.asm  inc_addr.asm  inc_dptr.asm  inc_ri.asm  inc_rn.asm
tests/8051_test_code/instruction_test/asm/mov/: mov_a_data.asm  mov_a_direct.asm  mov_a_ri.asm  mov_a_rn.asm  mov_bitaddr_c.asm  mov_c_bitaddr.asm  mov_direct_a.asm  mov_direct_data.asm  mov_direct_direct.asm  mov_direct_ri.asm  mov_direct_rn.asm  mov_dptr_data16.asm  mov_ri_a.asm  mov_ri_data.asm  mov_ri_direct.asm  mov_rn_a.asm  mov_rn_data.asm  mov_rn_direct.asm
tests/8051_test_code/instruction_test/asm/movc/: movc_a_a_dptr.asm  movc_a_a_pc.asm
tests/8051_test_code/instruction_test/asm/movx/: movx_a_dptr.asm  movx_a_ri.asm  movx_dptr_a.asm  movx_ri_a.asm
tests/acall/: c51_cpu_acall_page0_test.cpp  c51_cpu_acall_page1_test.cpp  c51_cpu_acall_page2_test.cpp  c51_cpu_acall_page3_test.cpp  c51_cpu_acall_page4_test.cpp  c51_cpu_acall_page5_test.cpp  c51_cpu_acall_page6_test.cpp  c51_cpu_acall_page7_test.cpp
tests/add/: c51_cpu_add_a_rn_test.cpp
tests/ajmp/: c51_cpu_ajmp_page0_test.cpp  c51_cpu_ajmp_page1_test.cpp  c51_cpu_ajmp_page2_test.cpp  c51_cpu_ajmp_page3_test.cpp  c51_cpu_ajmp_page4_test.cpp  c51_cpu_ajmp_page5_test.cpp  c51_cpu_ajmp_page6_test.cpp  c51_cpu_ajmp_page7_test.cpp
tests/dec/: c51_cpu_dec_a_test.cpp  c51_cpu_dec_addr_test.cpp  c51_cpu_dec_ri_test.cpp  c51_cpu_dec_rn_test.cpp
tests/inc/: c51_cpu_inc_a_test.cpp  c51_cpu_inc_addr_test.cpp  c51_cpu_inc_dptr_test.cpp  c51_cpu_inc_ri_test.cpp  c51_cpu_inc_rn_test.cpp
tests/mov/: c51_cpu_mov_a_data_test.cpp  c51_cpu_mov_a_direct_test.cpp  c51_cpu_mov_a_ri_test.cpp  c51_cpu_mov_a_rn_test.cpp  c51_cpu_mov_bitaddr_c_test.cpp  c51_cpu_mov_c_bitaddr_test.cpp  c51_cpu_mov_direct_a_test.cpp  c51_cpu_mov_direct_data_test.cpp  c51_cpu_mov_direct_direct_test.cpp  c51_cpu_mov_direct_ri_test.cpp  c51_cpu_mov_direct_rn_test.cpp  c51_cpu_mov_dptr_data16_test.cpp  c51_cpu_mov_ri_a_test.cpp  c51_cpu_mov_ri_data_test.cpp  c51_cpu_mov_ri_direct_test.cpp  c51_cpu_mov_rn_a_test.cpp  c51_cpu_mov_rn_data_test.cpp  c51_cpu_mov_rn_direct_test.cpp
tests/movc/: c51_cpu_movc_a_a_dptr_test.cpp  c51_cpu_movc_a_a_pc_test.cpp
tests/movx/: c51_cpu_movx_a_dptr_test.cpp  c51_cpu_movx_a_ri_test.cpp  c51_cpu_movx_dptr_a_test.cpp  c51_cpu_movx_ri_a_test.cpp
